@startuml Omnicam Class Diagram
skinparam defaultFontName "Arial"

enum RoleType {
    OWNER
    PROJECT_MANAGER
    COLLABORATOR
}

class User {
    +id: uuid <<PK>>
    +email: string
    +username: string
    +firstName: string
    +lastName: string
    -password: bytea
    +createdAt: timestamptz
    +updatedAt: timestamptz
    --
    +createWorkspace()
    +readWorkspace()
    +updateWorkspace()
    +deleteWorkspace()
}

class Project {
    +id: uuid <<PK>>
    +name: string
    +description: string
    +imagePath: string
    +imageExtension: string
    +createdAt: timestamptz
    +updatedAt: timestamptz
    --
    +createProject()
    +readProject()
    +updateProject()
    +deleteProject()
    +addUser(user: User, role: RoleType)
}

class Model {
    +modelId: uuid
    +name: string
    +version: int
    +createModel()
    +readModel()
    +updateModel()
    +deleteModel()
    +saveChanges()
}
class Distortion {
    +enabled: boolean
    +isFisheye: boolean
}

class Camera {
    +id: string
    +name: string
    +angleX: double
    +angleY: double
    +angleZ: double
    +angleW: double
    +posX: double
    +posY: double
    +posZ: double
    +fov: double
    +frustumColor: ColorRGBA
    +frustumLength: double
    +isHidingArrows: boolean
    +isHidingWheels: boolean
    +isLockingPosition: boolean
    +isLockingRotation: boolean
    +isHidingFrustum: boolean
    +widthRes: double
    +heightRes: double
    +distortion: Distortion
    --
    +create()
    +update()
    +delete()
    +moveCamera()
    +rotateCamera()
}

class Workspace {
    +userId: uuid <<PK>>
    +modelId: uuid <<PK>>
    +cameras: Camera[]
    +baseCameras: Camera[]
    +targetAreaTrapezoids: jsonb
    +scaleFactor: float
    +modelHeight: float
    +version: int
    +baseVersion: int
    +createdAt: timestamp
    +updatedAt: timestamp
    --
    +autosave()
    +tryMergeIntoModel()
    +resolveConflict()
}

class ColorRGBA {
    +r: double
    +g: double
    +b: double
    +a: double
}

Camera "1" *-- "1" Distortion : configures
Camera "1" *-- "1" ColorRGBA : styles

' Relationships
Project "1" -- "1..*" Model
Model "1" *-- "0..*" Camera
Workspace "0..*" --* "1" User
Workspace "0..*" --* "1" Model
User "1" -- "0..*" ProjectUserRole
Project "1" -- "0..*" ProjectUserRole

@enduml
